<resources>
    <string name="app_name">Activity Planner</string>
    <string name="username_string">Username:</string>
    <string name="email_string">Email:</string>
    <string name="password_string">Password:</string>
    <string name="confirm_password_string">Confirm password:</string>
    <string name="first_name_string">First name:</string>
    <string name="last_name_string">Last name:</string>
    <string name="username_string2">Username</string>
    <string name="email_string2">Email</string>
    <string name="password_string2">Password</string>
    <string name="confirm_password_string2">Confirm password</string>
    <string name="first_name_string2">First name</string>
    <string name="last_name_string2">Last name</string>
    <string name="register_string">Register</string>
    <string name="login_string">log In</string>
    <string name="register_help_string">Enter your details to register!</string>
    <string name="login_help_string">Enter your details to log In!</string>
    <string name="welcome_string">Welcome </string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="title_profile">Profile</string>
    <string name="title_planner">Planner</string>
    <string name="title_browse">Discover</string>
    <string name="empty_list">Enter Username Above to Search</string>
    <string name="upcomming_plans_string">Upcomming Plans</string>
    <string name="find_string">Find</string>
    <string name="create_string">Create</string>
    <string name="media_string">Photos</string>
    <string name="youtube_string">YouTube</string>
    <string name="create_plan_string">Create Plan</string>
    <string name="activity_string">Activity</string>
    <string name="date_string">Date</string>
    <string name="invite_friends_string">Invite Friends</string>
    <string name="edit_profile_string">Change Profile Picture</string>
    <string name="location_string">Location</string>
    <string name="date_picker_string">Date Picker</string>
    <string name="underline_username"><u>Username</u></string>
    <string name="underline_name"><u>Name</u></string>
    <string name="friends_string">Friends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_moop">Moop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="update">Update Interests</string>
    <string name="creator">Creator: </string>
    <string name="location">Location:</string>
    <string name="date">Date</string>
    <string name="activity">Activity</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="my_friends">My Friends</string>
    <string name="suggestions">Suggestions</string>
    <string name="upcoming_plan">Upcoming Plan</string>
    <string name="invite_friends_to_plan">Invite Friends to Plan</string>
    <string name="find_plans">Find Plans</string>
    <string name="type_your_message">type your message</string>
    <string name="add_gallery_images">Add Gallery Image</string>
    <string name="update_interests">Update Interests</string>
</resources>
